Modified design for AlertDialog and spinnerdialog.xml

--- a/app/src/main/res/drawable/button_style.xml
+++ b/app/src/main/res/drawable/button_style.xml
@@ -7,5 +7,6 @@
 <gradient android:angle="0"
     android:startColor="#cdd633"
     android:endColor="#33d1e7"
-    android:type="linear"/>
+    android:type="linear"
+    />
 </shape>
