--- a/app/src/main/res/layout/spinnerdialog.xml
+++ b/app/src/main/res/layout/spinnerdialog.xml
@@ -13,7 +13,8 @@
         android:layout_width="70dp"
         android:layout_height="50dp"
         android:layout_marginTop="40dp"
-        android:backgroundTintMode="src_in"
+        android:textAlignment="center"
+        android:gravity="center"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/spinner2"
@@ -24,7 +25,8 @@
         android:layout_width="70dp"
         android:layout_height="50dp"
         android:layout_marginTop="40dp"
-        android:scrollbarStyle="outsideInset"
+        android:textAlignment="center"
+        android:gravity="center"
         app:layout_constraintEnd_toStartOf="@+id/spinner3"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
@@ -36,6 +38,7 @@
         android:layout_height="50dp"
         android:layout_marginTop="8dp"
         android:text="@string/hours"
+        android:gravity="center"
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
         android:textColor="#020202"
         app:layout_constraintEnd_toStartOf="@+id/textView3"
@@ -49,6 +52,7 @@
         android:layout_height="50dp"
         android:layout_marginTop="8dp"
         android:text="@string/minutes"
+        android:gravity="center"
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
         android:textColor="#020202"
         app:layout_constraintEnd_toEndOf="parent"
