--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,4 +1,4 @@
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
         <!-- Customize your theme here. -->
@@ -6,6 +6,10 @@
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
         <item name="android:popupBackground">#FF4081</item>
-
+    </style>
+    <style name="customSpinnerDialog">
+        <item name="android:textColor">@color/black</item>
+        <item name="android:paddingStart">2dp</item>
+        <item name="android:scrollbars">none</item>
     </style>
 </resources>
