--- a/app/src/main/res/layout/activity_morning.xml
+++ b/app/src/main/res/layout/activity_morning.xml
@@ -29,9 +29,11 @@
         android:layout_height="85dp"
         android:layout_marginEnd="4dp"
         android:background="@android:color/transparent"
-        android:entries="@array/timer"
+        android:textAlignment="center"
+        android:gravity="center"
         android:spinnerMode="dialog"
-        android:prompt="@string/spinner_title"
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.515"
