--- a/app/src/main/res/layout/spinnerdialog.xml
+++ b/app/src/main/res/layout/spinnerdialog.xml
@@ -36,10 +36,12 @@
         android:layout_width="70dp"
         android:layout_height="50dp"
         android:layout_marginTop="8dp"
-        android:text="@string/hours"
         android:gravity="center"
+        android:text="@string/hours"
+        android:textAlignment="center"
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
         android:textColor="#020202"
+        android:textSize="16sp"
         app:layout_constraintEnd_toStartOf="@+id/textView3"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
@@ -50,10 +52,12 @@
         android:layout_width="70dp"
         android:layout_height="50dp"
         android:layout_marginTop="8dp"
-        android:text="@string/minutes"
         android:gravity="center"
+        android:text="@string/minutes"
+        android:textAlignment="center"
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
         android:textColor="#020202"
+        android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/textView2"
