--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,4 +1,4 @@
-<resources xmlns:tools="http://schemas.android.com/tools">
+<resources>
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
         <!-- Customize your theme here. -->
@@ -7,7 +7,4 @@
         <item name="colorAccent">@color/colorAccent</item>
         <item name="android:popupBackground">#FF4081</item>
     </style>
-
-
-
 </resources>
