Changed design, few photos, adjust numberPicker and sharedPreferences and so on

--- a/app/src/main/res/drawable/button4_style.xml
+++ b/app/src/main/res/drawable/button4_style.xml
@@ -5,6 +5,6 @@
         />
     <gradient android:angle="0"
         android:startColor="#2c6bf2"
-        android:endColor="#e7df8d"
+        android:endColor="#d8d873"
         android:type="linear"/>
 </shape>
