--- a/app/src/main/res/drawable/button6_style.xml
+++ b/app/src/main/res/drawable/button6_style.xml
@@ -5,7 +5,7 @@
     />
 
 <gradient android:angle="0"
-    android:startColor="#4462ce"
-    android:endColor="#e16369"
+    android:startColor="#6e6eb9"
+    android:endColor="#f09ef0"
     android:type="linear"/>
 </shape>
