--- a/app/src/main/res/layout/activity_free_your.xml
+++ b/app/src/main/res/layout/activity_free_your.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/mor"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -13,7 +12,7 @@
         android:id="@+id/btnStart"
         android:layout_width="85dp"
         android:layout_height="85dp"
-        android:background="@drawable/button2_style"
+        android:background="@android:color/transparent"
         android:contentDescription="@string/todo"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/timer"
@@ -30,6 +29,7 @@
         android:layout_height="85dp"
         android:layout_marginEnd="4dp"
         android:background="@android:color/transparent"
+        android:visibility="invisible"
         android:textAlignment="center"
         android:gravity="center"
         android:spinnerMode="dialog"
@@ -50,7 +50,7 @@
         android:layout_marginEnd="92dp"
         android:textStyle="bold"
         android:textSize="20sp"
-        android:background="@drawable/button2_style"
+        android:background="@android:color/transparent"
         android:gravity="center"
         android:textColor="#FFFFFF"
         android:visibility="invisible"
@@ -65,7 +65,7 @@
         android:id="@+id/timer"
         android:layout_width="85dp"
         android:layout_height="85dp"
-        android:background="@drawable/button2_style"
+        android:background="@android:color/transparent"
         android:contentDescription="@string/todo"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
