--- a/app/src/main/res/layout/activity_morning.xml
+++ b/app/src/main/res/layout/activity_morning.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/mor"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -13,7 +12,7 @@
         android:id="@+id/btnStart"
         android:layout_width="85dp"
         android:layout_height="85dp"
-        android:background="@drawable/button_style"
+        android:background="@android:color/transparent"
         android:contentDescription="@string/todo"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/timer"
@@ -28,44 +27,43 @@
         android:id="@+id/spinner"
         android:layout_width="85dp"
         android:layout_height="85dp"
-        android:layout_marginEnd="4dp"
-        android:background="@android:color/transparent"
-        android:textAlignment="center"
-        android:gravity="center"
-        android:spinnerMode="dialog"
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
+        android:layout_marginEnd="4dp"
+        android:background="@android:color/transparent"
+        android:gravity="center"
+        android:spinnerMode="dialog"
+        android:textAlignment="center"
+        android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.515"
         app:layout_constraintStart_toEndOf="@+id/btnStart"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.91"
-      />
+        app:layout_constraintVertical_bias="0.91" />
 
     <TextView
         android:id="@+id/textView"
-        android:layout_width="85dp"
-        android:layout_height="85dp"
-        android:layout_marginEnd="92dp"
-        android:textStyle="bold"
-        android:textSize="20sp"
-        android:background="@drawable/button_style"
+        android:layout_width="230dp"
+        android:layout_height="100dp"
+        android:background="@android:color/transparent"
         android:gravity="center"
         android:textColor="#FFFFFF"
+        android:textSize="20sp"
+        android:textStyle="bold"
         android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/timer"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="@+id/btnStart"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.91" />
+        app:layout_constraintVertical_bias="0.773" />
 
     <ImageButton
         android:id="@+id/timer"
         android:layout_width="85dp"
         android:layout_height="85dp"
-        android:background="@drawable/button_style"
+        android:background="@android:color/transparent"
         android:contentDescription="@string/todo"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
