--- a/app/src/main/res/layout/spinnerdialog.xml
+++ b/app/src/main/res/layout/spinnerdialog.xml
@@ -3,55 +3,41 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:theme="@android:style/Theme.Holo.Light"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:theme="@android:style/Theme.Holo.Light">
     <!-- Theme.Holo.Dialog makes more beautiful UI for Dialog -->
 
-    <Spinner
-        android:id="@+id/spinner3"
+    <NumberPicker
+        android:id="@+id/numberpicker_main_picker"
         android:layout_width="70dp"
-        android:layout_height="50dp"
-        android:layout_marginTop="40dp"
-        android:textAlignment="center"
-        android:gravity="center"
+        android:layout_height="181dp"
+        android:layout_marginStart="96dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/numberpicker_main_picker1"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.054" />
+
+    <NumberPicker
+        android:id="@+id/numberpicker_main_picker1"
+        android:layout_width="70dp"
+        android:layout_height="181dp"
+        android:layout_marginEnd="96dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toEndOf="@+id/spinner2"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <Spinner
-        android:id="@+id/spinner2"
-        android:layout_width="70dp"
-        android:layout_height="50dp"
-        android:layout_marginTop="40dp"
-        android:textAlignment="center"
-        android:gravity="center"
-        app:layout_constraintEnd_toStartOf="@+id/spinner3"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
-        android:id="@+id/textView2"
-        android:layout_width="70dp"
-        android:layout_height="50dp"
-        android:layout_marginTop="8dp"
-        android:gravity="center"
-        android:text="@string/hours"
-        android:textAlignment="center"
-        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-        android:textColor="#020202"
-        android:textSize="16sp"
-        app:layout_constraintEnd_toStartOf="@+id/textView3"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/spinner2" />
+        app:layout_constraintStart_toEndOf="@+id/numberpicker_main_picker"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.054" />
 
     <TextView
         android:id="@+id/textView3"
         android:layout_width="70dp"
         android:layout_height="50dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginStart="27dp"
+        android:layout_marginTop="4dp"
+        android:layout_marginEnd="122dp"
         android:gravity="center"
         android:text="@string/minutes"
         android:textAlignment="center"
@@ -59,8 +45,23 @@
         android:textColor="#020202"
         android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/textView2"
-        app:layout_constraintTop_toBottomOf="@+id/spinner3" />
+        app:layout_constraintTop_toBottomOf="@+id/numberpicker_main_picker1" />
+
+    <TextView
+        android:id="@+id/textView2"
+        android:layout_width="70dp"
+        android:layout_height="50dp"
+        android:layout_marginStart="122dp"
+        android:layout_marginTop="4dp"
+        android:gravity="center"
+        android:text="@string/hours"
+        android:textAlignment="center"
+        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+        android:textColor="#020202"
+        android:textSize="16sp"
+        app:layout_constraintEnd_toStartOf="@+id/textView3"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/numberpicker_main_picker" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
