--- a/app/src/main/res/layout/activity_forest.xml
+++ b/app/src/main/res/layout/activity_forest.xml
@@ -7,6 +7,7 @@
     android:background="@drawable/forest"
     tools:context=".Forest">
 
+
     <ImageButton
         android:id="@+id/btnStart"
         android:layout_width="85dp"
@@ -26,39 +27,37 @@
         android:id="@+id/spinner"
         android:layout_width="85dp"
         android:layout_height="85dp"
-        android:layout_marginEnd="4dp"
-        android:background="@android:color/transparent"
-        android:visibility="invisible"
-        android:textAlignment="center"
-        android:gravity="center"
-        android:spinnerMode="dialog"
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
+        android:layout_marginEnd="4dp"
+        android:background="@android:color/transparent"
+        android:gravity="center"
+        android:spinnerMode="dialog"
+        android:textAlignment="center"
+        android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.515"
         app:layout_constraintStart_toEndOf="@+id/btnStart"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.91"
-        />
+        app:layout_constraintVertical_bias="0.91" />
 
     <TextView
         android:id="@+id/textView"
-        android:layout_width="85dp"
-        android:layout_height="85dp"
-        android:layout_marginEnd="92dp"
-        android:textStyle="bold"
-        android:textSize="20sp"
+        android:layout_width="230dp"
+        android:layout_height="100dp"
         android:background="@android:color/transparent"
         android:gravity="center"
         android:textColor="#FFFFFF"
+        android:textSize="20sp"
+        android:textStyle="bold"
         android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/timer"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="@+id/btnStart"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.91" />
+        app:layout_constraintVertical_bias="0.773" />
 
     <ImageButton
         android:id="@+id/timer"
@@ -73,5 +72,6 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.91"
         app:srcCompat="@drawable/timer" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
