--- a/app/src/main/res/layout/activity_configuration.xml
+++ b/app/src/main/res/layout/activity_configuration.xml
@@ -8,6 +8,7 @@
     tools:context=".Configuration">
 
     <Button
+        android:id="@+id/rate"
         android:layout_width="383dp"
         android:layout_height="62dp"
         android:background="@drawable/buttons_conf_border"
@@ -25,7 +26,7 @@
 
 
     <Button
-        android:id="@+id/button2"
+        android:id="@+id/share"
         android:layout_width="383dp"
         android:layout_height="62dp"
         android:background="@drawable/buttons_conf_border"
@@ -42,7 +43,7 @@
         app:layout_constraintVertical_bias="0.436" />
 
     <Button
-        android:id="@+id/button4"
+        android:id="@+id/feedback"
         android:layout_width="383dp"
         android:layout_height="62dp"
         android:background="@drawable/buttons_conf_border"
@@ -62,6 +63,7 @@
         android:id="@+id/textView"
         android:layout_width="187dp"
         android:layout_height="52dp"
+        android:gravity="center"
         android:text="@string/support_us"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
         android:textColor="#000000"
@@ -69,7 +71,7 @@
         android:textStyle="italic"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.08"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.245" />
