--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -7,7 +7,7 @@
         <item name="colorAccent">@color/colorAccent</item>
         <item name="android:popupBackground">#FF4081</item>
         <item name="android:statusBarColor" tools:targetApi="lollipop">@color/oceanBlue</item>
-        <item name="android:navigationBarColor" tools:targetApi="lollipop">@color/oceanBlue</item>
+        <item name="android:navigationBarColor" tools:targetApi="lollipop">@color/black</item>
 
     </style>
 </resources>
