I've changed file location. Delete useless pieces of code. Finnish my app.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -192,7 +192,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btn10"
-        app:srcCompat="@drawable/settings" />
+        app:layout_constraintTop_toBottomOf="@+id/btn10" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
